stroke_fill_eraser
mouse-painting, changing line-width, changing paint-color, filling-mode, eraser are done. but CSS...

--- a/style.css
+++ b/style.css
@@ -1,11 +1,25 @@
+@import "reset.css";
+
 canvas {
-    width: 800px;
-    height: 800px;
-    border: 5px solid black
+  width: 800px;
+  height: 800px;
+  background-color: white;
+  border: 5px solid black;
+  border-radius: 10px;
 }
 
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.btn-row,
+.color-row {
+  display: flex;
+  align-items: center;
+}
+.color-option {
+  width: 50px;
+  height: 50px;
 }
