--- a/style.css
+++ b/style.css
@@ -4,22 +4,98 @@ canvas {
   width: 800px;
   height: 800px;
   background-color: white;
-  border: 5px solid black;
   border-radius: 10px;
 }
 
 body {
   display: flex;
+  gap: 30px;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
+  align-items: flex-start;
+  background-color: gainsboro;
+  padding: 30px;
   align-items: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-.btn-row,
 .color-row {
   display: flex;
   align-items: center;
+  gap: 5px;
 }
 .color-option {
+  transition: transform ease-in-out 0.1s;
+  border: 4px solid white;
   width: 50px;
   height: 50px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.color-option:hover {
+  transform: scale(1.2);
+}
+.btns {
+  display: flex;
+  align-items: flex-start;
+  gap: 30px;
+}
+.btns__drawing {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 250px;
+  text-align: center;
+}
+.etc-btn {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 250px;
+}
+input#color {
+  width: 50px;
+  height: 50px;
+}
+
+.etc-btn label,
+button {
+  all: unset;
+  padding: 10px 0;
+  text-align: center;
+  background-color: darkolivegreen;
+  color: white;
+  font-weight: 400;
+  cursor: pointer;
+  border-radius: 10px;
+  transition: opacity linear 0.3s;
+}
+button:hover {
+  opacity: 0.85;
+}
+
+input#text {
+  all: unset;
+  padding: 10px 0;
+  text-align: center;
+  background-color: white;
+  font-weight: 400;
+  border-radius: 10px;
+}
+input#file {
+  display: none;
+}
+
+.btns__drawing label {
+  display: flex;
+  justify-content: space-evenly;
+  width: 250px;
+  background-color: darkolivegreen;
+  padding: 10px 0;
+  color: white;
+  font-weight: 400;
+  border-radius: 10px;
+}
+#line-width {
+  width: 150px;
 }
